--- a/ex3/src/index.css
+++ b/ex3/src/index.css
@@ -2,25 +2,11 @@
   box-sizing: border-box;
 }
 
-main {
+body {
   padding: 1rem;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-/* Dark theme */
-.bg-dark {
-  background-color: rgb(63, 61, 61);
-}
-
-.panel-dark {
-  border-color: rgb(63, 61, 61);
-}
-
-.panel-dark .panel-heading {
-  background-color: rgb(63, 61, 61);
-  color: white;
 }
